[Fix] Alignment issue

--- a/portal_request/static/src/css/portal_css.css
+++ b/portal_request/static/src/css/portal_css.css
@@ -370,11 +370,12 @@
     margin: 0;
 }
 
+
 .pagination-controls {
     display: inline-flex;
     align-items: center;
-    gap: 0;
     height: 31px;
+    margin: 0;
 }
 
 .pagination-btn {
@@ -417,6 +418,7 @@
     padding: 0.75rem 1rem;
 }
 
+
 .header-flex .btn {
     margin-right: 0.5rem;
     height: 31px;
@@ -424,6 +426,9 @@
     align-items: center;
     justify-content: center;
     padding: 0 1rem;
+    
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 .header-flex form {
@@ -452,9 +457,10 @@
     }
     
     .header-flex .ms-lg-2 {
-        width: 100%;
-        justify-content: center;
-    }
+      display: flex;
+      align-items: center;
+      gap: 0.5rem; /* Add consistent spacing between elements */
+  }
     
     .header-flex form {
         width: 100%;
